--- a/package.json
+++ b/package.json
@@ -1,10 +1,12 @@
 {
-  "name": "express",
+  "name": "api_henrique",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start": "./node_modules/nodemon/bin/nodemon.js ./dist/"
+    "start": "./node_modules/nodemon/bin/nodemon.js ./dist/",
+    "version": "echo $npm_package_name:$npm_package_version",
+    "build": "./node_modules/typescript/bin/tsc"
   },
   "keywords": [],
   "author": "",
@@ -15,6 +17,7 @@
     "aws-sdk": "^2.926.0",
     "express": "^4.17.1",
     "nodemon": "^2.0.7",
-    "prom-client": "^13.1.0"
+    "prom-client": "^13.1.0",
+    "typescript": "^4.3.4"
   }
 }
