--- a/clusters/default/api_henrique.yaml
+++ b/clusters/default/api_henrique.yaml
@@ -31,5 +31,5 @@ spec:
     spec:
       containers:
         - name: api-henrique
-          image: hsulimann/api_henrique:1.2
+          image: 132818155912.dkr.ecr.us-east-1.amazonaws.com/api_henrique:1.1.0
 
