--- a/clusters/default/api_henrique.yaml
+++ b/clusters/default/api_henrique.yaml
@@ -32,4 +32,6 @@ spec:
       containers:
         - name: api-henrique
           image: 132818155912.dkr.ecr.us-east-1.amazonaws.com/api_henrique:1.1.0
+      imagePullSecrets:
+      - name: api-henrique-aws-ecr-us-east-1
 
