--- a/clusters/eks/default/api_henrique.yaml
+++ b/clusters/eks/default/api_henrique.yaml
@@ -14,6 +14,7 @@ apiVersion: apps/v1
 kind: Deployment
 metadata:
   name: api-henrique-svc
+  namespace: default
   labels:
     app: web
     tier: frontend
@@ -38,5 +39,5 @@ spec:
           ports:
             - containerPort: 80
       imagePullSecrets:
-      - name: api-henrique-aws-ecr-us-east-1
+        - name: api-henrique-aws-ecr-us-east-1
 
