--- a/clusters/eks/default/api_henrique_policy.yaml
+++ b/clusters/eks/default/api_henrique_policy.yaml
@@ -2,11 +2,11 @@
 apiVersion: image.toolkit.fluxcd.io/v1alpha1
 kind: ImagePolicy
 metadata:
-  name: api_henrique
+  name: api-henrique
   namespace: flux-system
 spec:
   imageRepositoryRef:
-    name: api_henrique
+    name: api-henrique
   policy:
     semver:
       range: 1.x
