--- a/clusters/eks/default/api_henrique_repository.yaml
+++ b/clusters/eks/default/api_henrique_repository.yaml
@@ -2,7 +2,7 @@
 apiVersion: image.toolkit.fluxcd.io/v1alpha1
 kind: ImageRepository
 metadata:
-  name: api_henrique
+  name: api-henrique
   namespace: flux-system
 spec:
   secretRef:
