--- a/clusters/eks/default/api_henrique.yaml
+++ b/clusters/eks/default/api_henrique.yaml
@@ -8,7 +8,7 @@ spec:
   ports:
     - name: api-henrique
       port: 4000
-  type: NodePort
+  type: LoadBalancer
 ---
 apiVersion: apps/v1
 kind: Deployment
@@ -40,4 +40,3 @@ spec:
             - containerPort: 80
       imagePullSecrets:
         - name: api-henrique-aws-ecr-us-east-1
-
